Remove overflow hidden rule from share links to avoid tooltip from being hidden as well

--- a/app/assets/stylesheets/strips.scss
+++ b/app/assets/stylesheets/strips.scss
@@ -393,7 +393,6 @@ main {
     height: 20px;
   }
   .share_two {
-    overflow: hidden;
     white-space: nowrap;
     height: 20px;
   }
